# RAGpilot

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml
.streamlit/: config.toml
src/advanced_rag/: __init__.py  chunking.py  config.py  database.py  embeddings.py  generation.py  ingestion.py  models.py  parser.py  retrieval.py  vector_store.py  worker.py
tests/: test_chunking.py  test_database.py  test_retrieval.py
