[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advanced-local-rag"
version = "0.1.0"
description = "Local hybrid RAG with bulk ingestion, Chroma, BM25, reranking, and grounded citations"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "chromadb>=1.1,<2",
  "docling>=2.50,<3",
  "httpx>=0.27,<1",
  "openai>=1.100,<3",
  "pydantic-settings>=2.10,<3",
  "sentence-transformers>=5,<6",
  "streamlit>=1.50,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<10",
  "ruff>=0.12,<1",
]

[project.scripts]
advanced-rag-worker = "advanced_rag.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/advanced_rag"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
